Products boxes completed

--- a/style.css
+++ b/style.css
@@ -19,20 +19,23 @@
     padding: 5px;
 }
 /* Commons */
+body{
+    font-family: 'Roboto', sans-serif;
+}
 /* Products */
 .product{
     padding: 10px;
     position: relative;
-    background-color: aqua;
 }
 .product img{
     width: 100%;
 }
 .brand{
+    text-transform: capitalize;
     color: #7f7f7f;
     font-size: 12px;
 }
-.description{
+.name{
     text-transform: uppercase;
     font-weight: bold;
 }
