--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@
 body{
     font-family: 'Roboto', sans-serif;
 }
+/* Utilities */
+.bg-red{
+    background-color: #eb0037;
+}
+.bg-green{
+    background-color: #00875a;
+}
 /* Products */
 .product{
     padding: 10px;
@@ -47,4 +54,34 @@ body{
 .old-cost{
     color: #7e9191;
     text-decoration: line-through;
+}
+.image-product{
+    position: relative;
+}
+.discount{
+    position: absolute;
+    bottom: 3%;
+    left: 0;
+    padding: 3px 6px;
+    font-size: 10px;
+    color: #ffffff;
+    font-weight: bold;
+}
+.tag{
+    position: absolute;
+    bottom: 3%;
+    left: 11%;
+    padding: 3px 6px;
+    font-size: 10px;
+    color: #ffffff;
+    font-weight: bold;
+}
+.heart{
+    position: absolute;
+    top: 5%;
+    right: 0;
+    background-color: #ffffff;
+    text-align: center;
+    padding: 5px 10px;
+    font-size: 20px;
 }
