--- a/BONUS/style.css
+++ b/BONUS/style.css
@@ -31,10 +31,18 @@ body{
 }
 /* Products */
 .product{
-    padding: 10px;
+    padding: 10px; 
 }
 .product img{
     width: 100%;
+}
+.img-bg{
+    display: none;
+}
+.product:hover .img-bg{
+    display: block;
+    width: 100%;
+    position: absolute;
 }
 .brand{
     text-transform: capitalize;
